@@ -1,0 +1,7 @@
+{
+  "item":
+  [
+    ["fu_materials_gold_ingot", "gold-ingot"]
+  ]
+}
+
