@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.6
 Date: 2023-03-22
+  Features:
+    - Basic compatility with 248k, unified gold ingot items and production lines.
   Fixes:
     - SE: Satellite rocket silo no longer requires palladium, due to tech deadlock
 ---------------------------------------------------------------------------------------------------
